Tweak the demo a bit more

--- a/src/app/bar-graph/bar-graph.component.html
+++ b/src/app/bar-graph/bar-graph.component.html
@@ -20,6 +20,8 @@
                           [results]="pieData()"
                           [doughnut]="doughnut"
                           [arcWidth]="pieArcWidth"
-                          [scheme]="colorScheme"></ngx-charts-pie-chart>
+                          [scheme]="colorScheme"
+                          [labels]="showPieLabels"
+                          [animations]="showPieAnimations"></ngx-charts-pie-chart>
   </div>
 </section>
